Updated to be a module-module project. The tests now run as a separate module and only test the public APIs. Also upgraded to Java 25 because it's the new hotness!